# kitti360_ros_player

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
kitti360_msgs/: CMakeLists.txt  package.xml
kitti360_msgs/msg/: Kitti360BoundingBox.msg  Kitti360InstanceID.msg
kitti360_publisher/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
kitti360_publisher/kitti360_publisher/: kitti360_publisher_node.py  labels.py
kitti360_publisher/launch/: Kitti360.launch  Kitti360.launch.py  Kitti360.launch_0.py
kitti360_publisher/rviz_config/: show_displayable.rviz
launch/: Kitti360.launch  Kitti360.launch.py
msg/: Kitti360BoundingBox.msg  Kitti360Confidence.msg  Kitti360SemanticID.msg  Kitti360SemanticRGB.msg
rviz2_config/: default.rviz
rviz_config/: show_displayable.rviz
scripts/: label_velodyne.py  transform.py  viz_bounding_box_open3d.py
src/: core.py  kitti360_data_publisher.py  kitti360_publisher.py  labels.py
